feat: добавлена jwt-аутентификация